# final

./: .ai-factory.json  .cicd-update.md  .commit_body  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secret_key  .vercelignore  ADMIN_PANEL_COMPLETE_README.md  ADMIN_PANEL_README.md  AGENTS.md  AI_AGENT_SETUP.md  AI_VALIDATION_COMPLETED.md  ARCHITECTURE_RULES.md  AUDIT_REPORT.md  AUTHENTICATION_COMPLETE_FIX_REPORT.md  AUTHENTICATION_FIX_REPORT.md  BACKEND_LOGGING_FIX.md  CHANGELOG.md  CHAT_AND_WEBSOCKET_FIX_REPORT.md  CI-CD-README.md  CI_CD_FINAL_STATUS_REPORT.md  CLAUDE.md  CRITICAL_SECURITY_FIXES_COMPLETED.md  DEPARTMENTS_COMPLETE_IMPLEMENTATION_REPORT.md  DEPARTMENTS_ENDPOINT_FIX_REPORT.md  DEPARTMENTS_FRONTEND_FIX_REPORT.md  DEPARTMENTS_SYSTEM_FINAL_REPORT.md  FINAL_ANALYSIS_REPORT.md  FINAL_AUTHENTICATION_SUCCESS_REPORT.md  FINAL_PROJECT_COMPLETION_REPORT.md  FINAL_SOLUTION_REPORT.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_SECURITY_FIX_PLAN.md  FULL_IMPLEMENTATION_PLAN.md  Fixing New Service Queue Time.md  (+209 more)
backend/: .bandit  .dockerignore  .env  .env.example  .env.local.restore  .flake8  .gitignore  AI_AUDIT_LOG_FIX.md  AI_TRACKING_README.md  ANALYTICS_100_PERCENT_REPORT.md  ANALYTICS_FINAL_SUCCESS_REPORT.md  ANALYTICS_WITH_VISUALIZATION_FINAL_REPORT.md  AUDIT_LOGGING_COMPLETE.md  AUDIT_LOGGING_IMPLEMENTATION.md  AUTHENTICATION_SYSTEM_FINAL_REPORT.md  AUTO_CONTINUE_README.md  BACKEND_COMPLETE_TODO.md  BUGFIXES.md  CICD_TEST_REPORT.md  CLINIC_MANAGEMENT_100_PERCENT_REPORT.md  CLINIC_MANAGEMENT_FRONTEND_100_PERCENT_REPORT.md  CLOUD_PRINTING_GUIDE.md  CRITICAL_TASKS_PROGRESS.md  Check-LoginDiagnostics.ps1  Dockerfile  Dockerfile.staging  EMAIL_SMS_SERVICES_100_PERCENT_REPORT.md  EMR_ENHANCEMENT_REPORT.md  EMR_FINAL_SUCCESS_REPORT.md  EMR_SYSTEM_100_PERCENT_REPORT.md  FILE_SYSTEM_100_PERCENT_REPORT.md  FINAL_BACKEND_STATUS.md  FINAL_FIXES_REPORT.md  FINAL_SYSTEM_100_PERCENT_COMPLETE.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_STATUS_REPORT.md  FIX_PORT_IN_USE.md  FK_POLICIES_SUMMARY.md  FRONTEND_BACKEND_100_PERCENT_COMPLETE.md  FRONTEND_BACKEND_COMPATIBILITY_ANALYSIS.md  (+377 more)
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_emr_v2_hard_cutover.py  0003_schema_parity_tables.py  0004_widen_visit_status.py  0005_lab_report_templates.py  0006_lab_report_seed_signature_and_immutability.py  0007_lab_tpl_version_guard.py  0008_lab_catalog_normalization.py  0009_lab_value_flag_snapshot.py  0010_lab_tpl_seed_signature_guard.py  0011_lab_template_service_bindings.py  0012_lab_bind_real_codes.py  0013_lab_bind_actual_catalog_codes.py  0014_cardio_blood_tests.py  0015_derma_records.py  0016_patient_email.py  0017_finance_transactions.py  0018_display_config_tables.py  0019_user_pref_security_settings.py  0020_notification_platform.py  0021_printing_tables.py  0022_service_audit_log.py  0023_ticket_print_qr_default.py  0024_telegram_user_language_code_bcp47.py  0024_tg_user_lang_bcp47.py  0025_telegram_staff_link_tokens.py  0026_telegram_staff_confirmation_tokens.py  0027_repair_telegram_user_language_code_length.py  0028_telegram_patient_form_submissions.py  0029_telegram_patient_onboarding_requests.py  0030_visit_queue_updated_at.py  0031_cardio_ecg_records.py  0032_messages_branch_id_tenant_isolation.py  0032_messages_clinic_id_tenant_isolation.py  0033_widen_backup_code_hash.py  0034_bot_token_encrypted.py  0035_fk_indexes.py  0036_chat_encryption.py  0037_patient_medical_fields.py  0038_user_fcm_fields.py  (+58 more)
backend/app/: __init__.py  main.py  main.py.backup  synthetic_seed.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  activation.py  alerts.py  audit.py  audit_helper.py  auth.py  cache.py  celery_app.py  config.py  exception_handlers.py  i18n.py  license.py  logging_config.py  malware_scanner.py  mcp_config.py  messaging_config.py  messaging_contract.py  observability.py  pii_masker.py  prometheus.py  query_optimizer.py  rate_limiter.py  rbac.py  role_validation.py  roles.py  secrets_manager.py  security.py  sentry.py  tenant_scope.py
backend/app/crud/: __init__.py  ai_config.py  appointment.py  audit.py  authentication.py  base.py  clinic.py  clinic_management.py  dermatology_photos.py  display_config.py  emr.py  emr_template.py  emr_version.py  file_system.py  finance.py  lab.py  lab_result.py  message.py  notification.py  online_queue.py  patient.py  payment.py  payment_webhook.py  print_config.py  queue.py  schedule.py  service.py  setting.py  telegram_config.py  two_factor_auth.py  user.py  user_management.py  visit.py  webhook.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py  transactions.py
backend/app/domain/: __init__.py  context_registry.py
backend/app/graphql/: __init__.py  depth_limit.py  mutations.py  resolvers.py  schema.py  types.py
backend/app/middleware/: audit_middleware.py  authentication.py  idempotency_middleware.py  observability_middleware.py  security_middleware.py  tenant_scope_middleware.py  user_permissions.py  websocket_rate_limit.py
backend/app/models/: __init__.py  activation.py  ai_chat.py  ai_config.py  appointment.py  audit.py  audit_log.py  (+61 more)
backend/docker/: entrypoint.staging.sh
backend/docs/: README.md
backend/quality-reports/: .gitkeep  README.md  bandit.json
backend/scripts/: cleanup_non_example_users.py  collect_linting_errors.py  dev_seed.py  emr_cutover_ops.py  ensure_admin_async.py  ensure_audit_table.py  generate_secrets.py  inspect_today_visits.py  migrate_sqlite_to_postgres.py  pass15_restore_compat_audit.py  reset_critical_passwords.py  reset_dev_db.py  run_emr_cutover.py  scan_rbac_matrix.py
backend/tests/: __init__.py  auth_test_credentials.py  conftest.py  test_2fa_enforcement.py  test_api_responses.py  test_audit_logs.py  test_auth_profile_api.py  test_cloud_printing_api.py  test_file_security.py  test_lab_reporting_api.py  test_observability.py  test_openapi_contract.py  test_payment_model.py  test_security_middleware.py  test_settings.py  test_tenant_scope_middleware.py  test_validators.py
(+5834 files in other folders)
