# Configuration for Python tooling in backend

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true
exclude = '''
/( 
  \.venv
  | dist
  | build
  | node_modules
  | __pycache__
  | .*\.pyi
  | alembic/versions
  | migrations
  | scripts
  | test_.*\.py
  | check_.*\.py
  | create_.*\.py
  | debug_.*\.py
  | fix_.*\.py
  | migrate_.*\.py
  | update_.*\.py
  | seed_.*\.py
  | setup_.*\.py
  | init_.*\.py
  | quick_.*\.py
  | simple_.*\.py
  | final_.*\.py
  | verify_.*\.py
  | find_.*\.py
  | get_.*\.py
  | remove_.*\.py
  | reset_.*\.py
  | move_.*\.py
  | load_.*\.py
  | integration_test\.py
  | backend_analysis\.py
  | demo_.*\.py
  | example_.*\.py
  | diagnose_.*\.py
  | add_.*\.py
)
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app"]
known_first_party = ["app"]
combine_as_imports = true
force_alphabetical_sort_within_sections = true
skip = [".venv", "node_modules", "dist", "build", "__pycache__"]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-backend"
version = "0.9.0"
description = "Clinic Queue Manager backend (FastAPI)"
requires-python = ">=3.11"
authors = [{ name = "Clinic Team" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.110,<0.125",
  "uvicorn[standard]>=0.29,<0.31",
  "pydantic>=2.7,<2.9",
  "SQLAlchemy>=2.0,<2.1",
  "alembic>=1.13,<1.14",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<1.8",
  "reportlab>=4.0,<4.3",
  "qrcode[pil]>=7.4,<7.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools]
zip-safe = false

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "dist",
    "build",
    "__pycache__",
    ".git",
    "node_modules",
    "alembic/versions",
    "migrations",
    "scripts",
    "test_*.py",
    "check_*.py",
    "create_*.py",
    "debug_*.py",
    "fix_*.py",
    "migrate_*.py",
    "update_*.py",
    "seed_*.py",
    "setup_*.py",
    "init_*.py",
    "quick_*.py",
    "simple_*.py",
    "final_*.py",
    "verify_*.py",
    "find_*.py",
    "get_*.py",
    "remove_*.py",
    "reset_*.py",
    "move_*.py",
    "load_*.py",
    "integration_test.py",
    "backend_analysis.py",
    "demo_*.py",
    "example_*.py",
    "diagnose_*.py",
    "add_*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "__pycache__/",
]

# Pylint configuration (via pyproject.toml)
[tool.pylint.main]
max-line-length = 88
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

# Radon configuration
[tool.radon]
exclude = [
    ".venv",
    "dist",
    "build",
    "__pycache__",
    "tests",
]

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D107"]
match = "(?!test_).*\\.py"
match-dir = "(?!tests|test_).*"