# Configuration for Python tooling in backend

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true
exclude = '''
/( 
  \.venv
  | dist
  | build
  | node_modules
  | __pycache__
  | .*\.pyi
  | alembic/versions
  | migrations
  | scripts
  | test_.*\.py
  | check_.*\.py
  | create_.*\.py
  | debug_.*\.py
  | fix_.*\.py
  | migrate_.*\.py
  | update_.*\.py
  | seed_.*\.py
  | setup_.*\.py
  | init_.*\.py
  | quick_.*\.py
  | simple_.*\.py
  | final_.*\.py
  | verify_.*\.py
  | find_.*\.py
  | get_.*\.py
  | remove_.*\.py
  | reset_.*\.py
  | move_.*\.py
  | load_.*\.py
  | integration_test\.py
  | backend_analysis\.py
  | demo_.*\.py
  | example_.*\.py
  | diagnose_.*\.py
  | add_.*\.py
)
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app"]
known_first_party = ["app"]
combine_as_imports = true
force_alphabetical_sort_within_sections = true
skip = [".venv", "node_modules", "dist", "build", "__pycache__"]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-backend"
version = "0.9.0"
description = "Clinic Queue Manager backend (FastAPI)"
requires-python = ">=3.11"
authors = [{ name = "Clinic Team" }]
readme = "README.md"
dependencies = [
  # Web framework & ASGI
  "fastapi>=0.121,<0.136",
  "uvicorn[standard]>=0.29,<0.48",
  "starlette>=0.40,<0.50",
  "python-multipart>=0.0.32,<0.0.33",
  "aiofiles>=24.1,<25.0",
  "aiohttp>=3.14.1,<3.15",

  # Validation & settings
  "pydantic>=2.7,<2.13",
  "pydantic[email]>=2.7,<2.13",
  "pydantic-settings>=2.14.1,<2.15",
  "email-validator>=2.0,<3.0",

  # Database
  "SQLAlchemy>=2.0,<2.1",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.13,<1.19",
  "redis>=5.0,<8.0",

  # Auth & security
  "PyJWT>=2.8,<3.0",
  "passlib[argon2]>=1.7,<1.8",
  "argon2-cffi>=21.3,<26.0",
  "cryptography>=42.0,<46.0",

  # PDF & documents
  "reportlab>=4.0,<4.6",
  "weasyprint>=68.1,<70.0",
  "qrcode[pil]>=7.4,<8.3",
  "pillow>=12.2.0,<13.0.0",
  "defusedxml>=0.7.1,<0.8",

  # Templates
  "jinja2>=3.1.6,<3.2",

  # HTTP clients
  "requests>=2.34.2,<3.0",
  "httpx>=0.25,<0.29",

  # Hardware
  "pyserial>=3.5,<4.0",

  # HTML parsing
  "beautifulsoup4>=4.14.3,<5.0",

  # Telegram
  "python-telegram-bot>=22.7,<23.0",
  "aiogram>=3.28.2,<4.0.0",

  # AI providers
  "openai>=1.0.0,<2.0.0",
  "google-generativeai>=0.8.0,<1.0.0",
  "google-api-core>=2.0.0,<3.0.0",
  "google-auth>=2.53.0,<3.0.0",
  "grpcio>=1.81.0,<2.0.0",
  "proto-plus>=1.28.0,<2.0.0",
  "protobuf>=5.29.6,<6.0.0",

  # Data processing
  "pandas>=3.0.3,<4.0.0",
  "psutil>=5.9.0,<6.0.0",

  # GraphQL
  "strawberry-graphql>=0.315.5",

  # Background tasks
  "arq>=0.26.0,<0.27",

  # Security: rate limiting & file validation
  "slowapi==0.1.10",
  "python-magic==0.4.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools]
zip-safe = false

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "dist",
    "build",
    "__pycache__",
    ".git",
    "node_modules",
    "alembic/versions",
    "migrations",
    "scripts",
    "test_*.py",
    "check_*.py",
    "create_*.py",
    "debug_*.py",
    "fix_*.py",
    "migrate_*.py",
    "update_*.py",
    "seed_*.py",
    "setup_*.py",
    "init_*.py",
    "quick_*.py",
    "simple_*.py",
    "final_*.py",
    "verify_*.py",
    "find_*.py",
    "get_*.py",
    "remove_*.py",
    "reset_*.py",
    "move_*.py",
    "load_*.py",
    "integration_test.py",
    "backend_analysis.py",
    "demo_*.py",
    "example_*.py",
    "diagnose_*.py",
    "add_*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # exception chaining in legacy code (TODO: tighten)
    "E712",  # comparisons to True/False (common in SQLAlchemy filters)
    "E722",  # bare excepts in legacy code (TODO: tighten)
    "F405",  # may be undefined from star imports (intentional in split package pattern)
    "E402",  # module-import-not-at-top-of-file (conditional imports after config — known pattern)
    "F821",  # undefined-name (pre-existing: i18n t() function, split package re-exports)
    "F841",  # unused-variable (pre-existing tech debt)
    "F811",  # redefined-while-unused (intentional in mixin pattern - methods defined in multiple mixins)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "__pycache__/",
]

# Pylint configuration (via pyproject.toml)
[tool.pylint.main]
max-line-length = 88
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

# Radon configuration
[tool.radon]
exclude = [
    ".venv",
    "dist",
    "build",
    "__pycache__",
    "tests",
]

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D107"]
match = "(?!test_).*\\.py"
match-dir = "(?!tests|test_).*"

